--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -22,7 +22,7 @@
 Startup might look something like this:
 
 {{{
-SessionFactory.Initialize("MyDatabase.sqlite");
+SessionFactory.Initialize("Data source=MyDatabase.sqlite", new SqliteAdapter());
 Domain.Configure
 (
     Map.Entity<Person>()
@@ -66,6 +66,14 @@ Domain.Configure
         .Map(new ValuePropertyMap<Post, string>(x => x.Body))
         .Map(new BelongsToPropertyMap<Post, Person>(x => x.Poster, "PosterId"))
 );
+}}}
+
+=Mono.Data.Sqlite=
+
+Using !SqliteAdapter with no constructor parameters tells Catnap to find for System.Data.Sqlite in the bin folder.  If you are using Mono.Data.Sqlite you needs to pass the connection type into the adapter, like so:
+
+{{{
+SessionFactory.Initialize("Data source=MyDatabase.sqlite", new SqliteAdapter(typeof(SqliteConnection));
 }}}
 
 = IEntity Interface =
