--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -5,7 +5,7 @@
  * Mapped collections:
    * loading - automatically load collections, lazily or eagerly, as specified per collection
    * cascading - automatically save/update/delete changes to collections, as specified per collection
-   * filtering - criteria can be specified per collection
+   * filtering - criteria can be specified per collection to selectively load items
  * Connection and transaction boundaries controlled via a basic !UnitOfWork context
  * Repository`<T>` base class implements basic persistence operations
  * Simple ICriteria API for building conditions for find queries
