--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -12,7 +12,7 @@
  * Create any kind of parameterized raw SQL query in code
  * Support for Linq predicates for finding and filtering collections (very limited at present)
  * Database migration utility. Provides automatic deployment of database changes based on migrations that you write (forward only)
- * Uses ADO.NET providers.  Currently implemented for Sqlite.  Tested with:
+ * Uses ADO.NET API.  Currently implemented for Sqlite.  Tested with:
    * System.Data.Sqlite
    * Mono.Data.Sqlite
  * Very lightweight (currently well under 100k)
