--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -76,7 +76,7 @@ Passing an instance of !SqliteAdapter into the !SessionFactory tells Catnap to f
 SessionFactory.Initialize("Data source=MyDatabase.sqlite", new SqliteAdapter(typeof(SqliteConnection));
 }}}
 
-This is required because Mono (or at least !MonoTouch) encounters an error trying to dynamically load the type at runtime.
+This is required because Mono (or at least !MonoTouch) encounters an error trying to dynamically load a type at runtime.
 
 = IEntity Interface =
 
