--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -273,3 +273,4 @@ int count = UnitOfWork.Current.Session.ExecuteScalar<int>(command);
  * Session cache. Currently there is no caching of fetched entities.  This creates a performance problem for cascading.  To cascade we must retrieve the entire persisted collection in order to synchronize changes.  Therefore, cascading is currently only appropriate for collections of a small size.
  * Lazy loading of !BelongsTo (many-to-one) properties.
  * Introduce lightweight IoC, if possible.  (Most IoC containers won't work on !MonoTouch.  Posibilities are [http://funq.codeplex.com/ Funq] and [http://docs.codehaus.org/display/PICO/Home PicoContainer.NET])
+ * Create adapters for other ADO.NET providers.  This might require some work to the core code to support differences in SQL dialect. 
