--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,7 +1,7 @@
 = Features =
 
  * Fluent mapping
- * Mapped entities inherit from IEntity interface
+ * Mapped entities
  * Mapped collections:
    * loading - automatically load collections, lazily or eagerly, as specified per collection
    * cascading - automatically save/update/delete changes to collections, as specified per collection
