--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,11 +1,11 @@
 = Features =
 
  * Fluent mapping
- * Mapped entities
- * Mapped collections:
-   * loading - automatically load collections, lazily or eagerly, as specified per collection
-   * cascading - automatically save/update/delete changes to collections, as specified per collection
-   * filtering - criteria can be specified per collection to selectively load items
+   * Entities
+   * Mapped collections:
+     * loading - automatically load collections, lazily or eagerly, as specified per collection
+     * cascading - automatically save/update/delete changes to collections, as specified per collection
+     * filtering - criteria can be specified per collection to selectively load items
  * Connection and transaction boundaries controlled via a thread safe Unit Of Work context
  * Repository`<T>` base class implements basic persistence operations
  * Simple ICriteria API for building conditions for find queries
