--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -9,7 +9,7 @@
      * filtering - selectively load items base on criteria specified per collection
  * Connection and transaction boundaries controlled via a thread safe Unit Of Work context
  * Repository`<T>` base class implements basic persistence operations
- * Simple ICriteria API for building conditions for find queries
+ * Simple ICriteria API to build complex find queries
  * Create any kind of parameterized raw SQL query in code
  * Support for Linq predicates for finding and filtering collections (very limited at present)
  * Database migration utility. Provides automatic deployment of database changes based on migrations that you write (forward only)
