--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -12,7 +12,9 @@
  * Simple ICriteria API to build complex find queries
  * Create any kind of parameterized raw SQL query in code
  * Use Linq predicates to create find queries and to filter collections (very limited at present)
- * Database migration utility. Automatically deploy database changes based on migrations that you write (forward only).  Very useful for embedded database scenarios.
+ * Database migration utility
+   * automatically deploy database changes based on migrations that you write (forward only)
+   * very useful for embedded database scenarios
  * Uses ADO.NET API.  Currently implemented for Sqlite.  Tested with:
    * System.Data.Sqlite
    * Mono.Data.Sqlite
