--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -4,17 +4,17 @@
    * Entities
    * Many to one associations (belongs to)
    * One to many associations (collections):
-     * loading - automatically load collections, lazily or eagerly, as specified per collection
-     * cascading - automatically save/update/delete changes to collections, as specified per collection
-     * filtering - selectively load items base on criteria specified per collection
+     * Loading - automatically load collections, lazily or eagerly, as specified per collection
+     * Cascading - automatically save/update/delete changes to collections, as specified per collection
+     * Filtering - selectively load items base on criteria specified per collection
  * Connection and transaction boundaries controlled via a thread safe Unit Of Work context
  * Repository`<T>` base class implements basic persistence operations
  * Simple ICriteria API to build complex find queries
  * Create any kind of parameterized raw SQL query in code
  * Use Linq predicates to create find queries and to filter collections (very limited at present)
  * Database migration utility
-   * automatically deploy database changes based on migrations that you write (forward only)
-   * very useful for embedded database scenarios
+   * Automatically deploy database changes based on migrations that you write (forward only)
+   * Very useful for embedded database scenarios
  * Uses ADO.NET API.  Currently implemented for Sqlite.  Tested with:
    * System.Data.Sqlite
    * Mono.Data.Sqlite
