--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,6 +1,9 @@
 = Features =
 
- * Fluent mapping
+ * Uses ADO.NET API.  Currently implemented for Sqlite.  Tested with:
+   * System.Data.Sqlite
+   * Mono.Data.Sqlite
+ * Simple fluent mapping
    * Entities
    * Many to one associations (belongs to)
    * One to many associations (collections):
@@ -15,9 +18,6 @@
  * Database migration utility
    * Automatically deploy database changes based on migrations that you write (forward only)
    * Very useful for embedded database scenarios
- * Uses ADO.NET API.  Currently implemented for Sqlite.  Tested with:
-   * System.Data.Sqlite
-   * Mono.Data.Sqlite
  * Very lightweight (currently well under 100k)
 
 = Configuration =
