--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -49,6 +49,8 @@ using (UnitOfWork.Start())
 
 Notice that you do not have to map the Id property.  All other persisted properties must be mapped and must have both a getter and a setter.  The getters and setters _do not_ have to be public.
 
+==!MonoTouch==
+
 There are some [UsingCatnapWithMonoTouch special considerations for using Catnap with MonoTouch].
 
 = IEntity Interface =
